--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -1,19 +1,17 @@
 {
   "manifest_version": 2,
 
-  "name": "Select Text",
+  "name": "Summary Help",
   "description": "This extension select Text program.",
   "version": "1.0",
   "minimum_chrome_version": "46",
   
   "icons": {
-    "128": "icon128.png",
-    "48": "icon48.png",
-    "16": "icon16.png"
+    "16": "sh_icon.png"
   },
 
   "browser_action": {
-    "default_icon": "icon16.png",
+    "default_icon": "sh_icon.png",
     "default_popup": "popup.html"
   },
 
