--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Summary Help",
-  "description": "This extension select Text program.",
+  "description": "This extension Create Summary-Text.",
   "version": "1.0",
   "minimum_chrome_version": "46",
   
